tests/ui/static/static-lifetime.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/static-lifetime.rs:3:20
   |
LL | impl<'a, A: Clone> Arbitrary for ::std::borrow::Cow<'a, A> {}
   |                    ^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/static-lifetime.rs:3:6
   |
LL | impl<'a, A: Clone> Arbitrary for ::std::borrow::Cow<'a, A> {}
   |      ^^
   = note: but lifetime parameter must outlive the static lifetime
note: `'static` requirement introduced here
  --> $DIR/static-lifetime.rs:1:30
   |
LL | pub trait Arbitrary: Sized + 'static {}
   |                              ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0478`.
